fixes for Java 8